# Btrust_HR_Common

./: README.md  pyproject.toml
Common/: utils.py
src/btrust_common/: __init__.py  core.py
src/workhours/: core.py  types.py
